force-app/main/default/objects/Action_Plan_Checklist__c/Action_Plan_Checklist__c.object-meta.xml
<CustomObject>
    <label>Action Plan Checklist</label>
    <nameField>
        <displayFormat>APC-{000000}</displayFormat>
        <label>Action Plan Checklist No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plan Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>