force-app/main/default/objects/Action_Plan_Checklist__c/fields/Are_the_Rooms_Heating_up_and_Cooling__c.field-meta.xml
<CustomField>
    <fullName>Are_the_Rooms_Heating_up_and_Cooling__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are the rooms heating up and cooling off properly?</inlineHelpText>
    <label>Are the Rooms Heating up and Cooling?</label>
    <type>Checkbox</type>
</CustomField>