force-app/main/default/objects/Action_Plan_Checklist__c/fields/Are_the_Window_Seals_Intact__c.field-meta.xml
<CustomField>
    <fullName>Are_the_Window_Seals_Intact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are the Window Seals Intact?</label>
    <type>Checkbox</type>
</CustomField>