force-app/main/default/objects/Action_Plan_Checklist__c/fields/Are_There_any_Holes_or_Cracks__c.field-meta.xml
<CustomField>
    <fullName>Are_There_any_Holes_or_Cracks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there any holes or cracks large enough for rodents to enter?</inlineHelpText>
    <label>Are There any Holes or Cracks?</label>
    <type>Checkbox</type>
</CustomField>