force-app/main/default/objects/Action_Plan_Checklist__c/fields/Are_There_any_Signs_of_Pets__c.field-meta.xml
<CustomField>
    <fullName>Are_There_any_Signs_of_Pets__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there any signs of pets or termite activity?</inlineHelpText>
    <label>Are There any Signs of Pets ?</label>
    <type>Checkbox</type>
</CustomField>