force-app/main/default/objects/Action_Plan_Checklist__c/fields/Are_There_any_Trees_Encroaching__c.field-meta.xml
<CustomField>
    <fullName>Are_There_any_Trees_Encroaching__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there any trees encroaching on the foundation?</inlineHelpText>
    <label>Are There any Trees Encroaching?</label>
    <type>Checkbox</type>
</CustomField>