force-app/main/default/objects/Action_Plan_Checklist__c/fields/Are_There_Significant_Cracks__c.field-meta.xml
<CustomField>
    <fullName>Are_There_Significant_Cracks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there significant cracks in the walls, ceiling or exterior walls?</inlineHelpText>
    <label>Are There Significant Cracks?</label>
    <type>Checkbox</type>
</CustomField>