force-app/main/default/objects/Action_Plan_Checklist__c/fields/Baseboard_Pulling_Away_from_the_wall__c.field-meta.xml
<CustomField>
    <fullName>Baseboard_Pulling_Away_from_the_wall__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the Baseboard Pulling Away from the wall?</inlineHelpText>
    <label>Baseboard Pulling Away from the wall?</label>
    <type>Checkbox</type>
</CustomField>