force-app/main/default/objects/Action_Plan_Checklist__c/fields/Check_Ceilings_and_around_Window__c.field-meta.xml
<CustomField>
    <fullName>Check_Ceilings_and_around_Window__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the Ceilings and around the Window and pipes in each room for evidence of leaks.</inlineHelpText>
    <label>Check Ceilings and around Window ?</label>
    <type>Checkbox</type>
</CustomField>