force-app/main/default/objects/Action_Plan_Checklist__c/fields/Have_the_Outlets_been_Grounded__c.field-meta.xml
<CustomField>
    <fullName>Have_the_Outlets_been_Grounded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have the Outlets been Grounded?</label>
    <type>Checkbox</type>
</CustomField>