force-app/main/default/objects/Action_Plan_Checklist__c/fields/Is_the_paint_Flaking__c.field-meta.xml
<CustomField>
    <fullName>Is_the_paint_Flaking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the paint Flaking?</label>
    <type>Checkbox</type>
</CustomField>