force-app/main/default/objects/Action_Plan_Checklist__c/fields/Is_There_Adequate_Insulation__c.field-meta.xml
<CustomField>
    <fullName>Is_There_Adequate_Insulation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is There Adequate Insulation?</label>
    <type>Checkbox</type>
</CustomField>