force-app/main/default/objects/Action_Plan_Checklist__c/fields/Is_There_Knob_and_Tube_Wiring__c.field-meta.xml
<CustomField>
    <fullName>Is_There_Knob_and_Tube_Wiring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is There Knob-and-Tube Wiring?</label>
    <type>Checkbox</type>
</CustomField>