force-app/main/default/objects/Action_Plan_Checklist__c/fields/Standing_Water_Near_the_Home__c.field-meta.xml
<CustomField>
    <fullName>Standing_Water_Near_the_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there any obvious sign of standing water near the house?</inlineHelpText>
    <label>Standing Water Near the Home?</label>
    <type>Checkbox</type>
</CustomField>