force-app/main/default/objects/Action_Plan_Checklist__c/fields/What_is_the_condition_of_the_Siding__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_condition_of_the_Siding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>What is the condition of the Siding?</label>
    <type>Checkbox</type>
</CustomField>