force-app/main/default/objects/Action_Plan_Checklist__c/fields/What_is_the_Condition_of_Water_heater__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_Condition_of_Water_heater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>What is the Condition of  Water heater?</label>
    <type>Checkbox</type>
</CustomField>