force-app/main/default/objects/Action_Plan_Checklist__c/fields/What_was_it_last_Replaced__c.field-meta.xml
<CustomField>
    <fullName>What_was_it_last_Replaced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>What was it last Replaced?</label>
    <type>Checkbox</type>
</CustomField>