force-app/main/default/objects/Action_Plan_Checklist__c/fields/where_the_floor_is_Sagging__c.field-meta.xml
<CustomField>
    <fullName>where_the_floor_is_Sagging__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are there any areas where the floor is sagging?</inlineHelpText>
    <label>where the floor is Sagging?</label>
    <type>Checkbox</type>
</CustomField>