force-app/main/default/objects/Action_Plan_Checklist__c/recordTypes/Appliances.recordType-meta.xml
<RecordType>
    <fullName>Appliances</fullName>
    <active>true</active>
    <label>Appliances</label>
</RecordType>