force-app/main/default/objects/Action_Plan_Checklist__c/recordTypes/Attic.recordType-meta.xml
<RecordType>
    <fullName>Attic</fullName>
    <active>true</active>
    <label>Attic</label>
</RecordType>