force-app/main/default/objects/Action_Plan_Checklist__c/recordTypes/Basement.recordType-meta.xml
<RecordType>
    <fullName>Basement</fullName>
    <active>true</active>
    <label>Basement</label>
</RecordType>