force-app/main/default/objects/Action_Plan_Checklist__c/recordTypes/Exterior.recordType-meta.xml
<RecordType>
    <fullName>Exterior</fullName>
    <active>true</active>
    <label>Exterior</label>
</RecordType>