force-app/main/default/objects/Action_Plan_Checklist__c/recordTypes/Heating_Cooling_System.recordType-meta.xml
<RecordType>
    <fullName>Heating_Cooling_System</fullName>
    <active>true</active>
    <label>Heating/Cooling System</label>
</RecordType>