force-app/main/default/objects/Action_Plan_Checklist__c/recordTypes/Interior.recordType-meta.xml
<RecordType>
    <fullName>Interior</fullName>
    <active>true</active>
    <label>Interior</label>
</RecordType>