force-app/main/default/objects/Action_Plan_Checklist__c/recordTypes/Lot.recordType-meta.xml
<RecordType>
    <fullName>Lot</fullName>
    <active>true</active>
    <label>Lot</label>
</RecordType>