force-app/main/default/objects/Action_Plan_Checklist__c/recordTypes/Roof.recordType-meta.xml
<RecordType>
    <fullName>Roof</fullName>
    <active>true</active>
    <label>Roof</label>
</RecordType>