force-app/main/default/objects/Action_Plan_Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action_Plan_Template__c</columns>
    <columns>Are_Gutters_and_Downspouts__c</columns>
    <columns>Are_the_Air_Filters_Clean__c</columns>
    <columns>Are_the_Sinks_Tubs_Showers_Draining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>